manifest/prod/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: tcc-2-gateway
  name: tcc-2-gateway-service
  namespace: group-2-dev
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 80
  selector:
    app: tcc-2-gateway
status:
  loadBalancer: {}
